<resources>
    <string name="app_name">MVVM-RDF</string>
    <string name="index">首页</string>
    <string name="article">文章</string>
    <string name="project">项目</string>
    <string name="todo">TODO</string>
    <string name="mine">我的</string>
    <string name="login">登录</string>
    <string name="unlogin">未登录</string>
    <string name="my_collect">我的收藏</string>
    <string name="about">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="username">用户名</string>
    <string name="passwd">密&#160;&#160;&#160;&#160;码</string>
    <string name="edit_hint_username">请输入用户名</string>
    <string name="edit_hint_passwd">请输入密码</string>
</resources>