<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.cw.rdf.app.vm.MineVm" />

        <variable
            name="fragment"
            type="com.cw.rdf.app.fragment.MineFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/blue"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mine"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:id="@+id/top_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/title_layout" />

        <LinearLayout
            android:id="@+id/user_info_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/top_line"
            android:clickable="@{vm.userName.empty?true:false}"
            android:onClick="@{()->fragment.navToLogin()}">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@{vm.userName.empty?@string/unlogin:vm.userName}"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </LinearLayout>

        <View
            android:id="@+id/top_line1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/user_info_layout" />


        <View
            android:id="@+id/top_line2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/top_line1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/top_line2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:onClick="@{()->fragment.navToMyCollect()}">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:background="@mipmap/icon_collect" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@id/icon"
                    android:text="@string/my_collect"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:background="@mipmap/icon_arrow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray" />
            </RelativeLayout>


            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:background="@mipmap/icon_about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@id/icon1"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:background="@mipmap/icon_arrow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:onClick="@{()->fragment.logout()}">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentTop="true"
                    android:background="@color/gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="30dp"
                    android:text="@string/logout"
                    android:textColor="@color/red"
                    android:textSize="16dp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>